--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "dev": "next dev --port 3050",
     "build": "next build",
-    "start": "next start --port 3050"
+    "start": "next start --port 3050",
+    "playwright:install": "playwright install chromium",
+    "playwright:test": "playwright test",
+    "screenshots": "playwright test --reporter=list"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "recharts": "^3.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@types/node": "^24.5.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
