--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -7,7 +7,8 @@
     "start": "next start --port 3050",
     "playwright:install": "playwright install chromium",
     "playwright:test": "playwright test",
-    "screenshots": "playwright test --reporter=list"
+    "screenshots": "playwright test --reporter=list",
+    "snapshots": "node scripts/capture-dashboard-screenshots.mjs"
   },
   "keywords": [],
   "author": "",
