--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cli": "node cli/index.mjs",
     "docs:serve": "honkit serve docs --port 3052",
     "docs:build": "honkit build docs docs/_book",
-    "docs:deploy": "bash tools/docs-deploy.sh"
+    "docs:deploy": "bash tools/docs-deploy.sh",
+    "migrate": "node cli/scripts/apply-migrations.mjs",
+    "backfill:metadata": "node cli/scripts/backfill-stream-metadata.mjs"
   },
   "keywords": [
     "pump.fun",
@@ -34,6 +36,7 @@
     "@livekit/rtc-node": "^0.13.18",
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^16.6.1",
+    "pg": "^8.16.3",
     "puppeteer": "^24.21.0",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.3"
