Add AWS S3 integration for snapshot storage in Supabase storage module

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Optional tuning for batched inserts
 # SUPABASE_TRADE_FLUSH_INTERVAL_MS=1500
 # SUPABASE_TRADE_BATCH_SIZE=200
+
+# AWS S3
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_S3_BUCKET=
+#AWS_REGION=
