--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.891.0",
     "@livekit/rtc-node": "^0.13.18",
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^16.6.1",
