Add snapshot retention configuration options to .env.example and add cleanup command to package.json

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 #AWS_SECRET_ACCESS_KEY=
 #AWS_S3_BUCKET=
 #AWS_REGION=
+
+# Snapshot retention (hours)
+#SNAPSHOT_RETENTION_HOURS=48
+#SNAPSHOT_CLEANUP_BATCH=5000
