--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Snapshot retention (hours)
 #SNAPSHOT_RETENTION_HOURS=48
 #SNAPSHOT_CLEANUP_BATCH=5000
+
+# Prisma / direct Postgres connection
+# DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:55432/postgres
