--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "docs:build": "honkit build docs docs/_book",
     "docs:deploy": "bash tools/docs-deploy.sh",
     "migrate": "node cli/scripts/apply-migrations.mjs",
-    "backfill:metadata": "node cli/scripts/backfill-stream-metadata.mjs"
+    "backfill:metadata": "node cli/scripts/backfill-stream-metadata.mjs",
+    "prisma:generate": "prisma generate",
+    "prisma:pull": "prisma db pull",
+    "postinstall": "prisma generate"
   },
   "keywords": [
     "pump.fun",
@@ -36,9 +39,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.891.0",
     "@livekit/rtc-node": "^0.13.18",
+    "@prisma/client": "^6.16.2",
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^16.6.1",
     "pg": "^8.16.3",
+    "prisma": "^6.16.2",
     "puppeteer": "^24.21.0",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.3"
